// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing header action creators should create a set archetype action 1`] = `
Object {
  "payload": Object {
    "archetype": "doctor",
  },
  "type": "header/SET_ARCHETYPE",
}
`;

exports[`Testing header action creators should create a set concept action 1`] = `
Object {
  "payload": Object {
    "concept": "New Concept",
  },
  "type": "header/SET_CONCEPT",
}
`;

exports[`Testing header action creators should create a set name action 1`] = `
Object {
  "payload": Object {
    "name": "New Name",
  },
  "type": "header/SET_NAME",
}
`;

exports[`Testing header action creators should create a set rank action 1`] = `
Object {
  "payload": Object {
    "rank": 2,
  },
  "type": "header/SET_RANK",
}
`;
